--- a/frontend/create_book.html
+++ b/frontend/create_book.html
@@ -137,10 +137,18 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const isStaticFile = window.location.protocol === 'file:';
+            const apiBaseUrl = isStaticFile ? '' : 'http://localhost:5000';
+            
+            // Update form action for backend
+            if (!isStaticFile) {
+                document.getElementById('book-form').action = `${apiBaseUrl}/books/create`;
+            }
             
             // Load sections from API in non-static mode
             if (!isStaticFile) {
-                fetch('/api/sections')
+                fetch(`${apiBaseUrl}/api/sections`, {
+                    credentials: 'include'
+                })
                     .then(response => response.json())
                     .then(sections => {
                         const sectionSelect = document.getElementById('section_id');
