--- a/frontend/register.html
+++ b/frontend/register.html
@@ -119,10 +119,18 @@
     <script>
         // Handle form submission for standalone demo
         document.addEventListener('DOMContentLoaded', function() {
+            const isStaticFile = window.location.protocol === 'file:';
+            const apiBaseUrl = isStaticFile ? '' : 'http://localhost:5000';
+            
+            // Update form action for non-static mode
+            if (!isStaticFile) {
+                document.getElementById('register-form').action = `${apiBaseUrl}/auth/register`;
+            }
+            
             const registerForm = document.getElementById('register-form');
             registerForm.addEventListener('submit', function(e) {
                 // If we're running as a static file, prevent actual form submission
-                if (window.location.protocol === 'file:') {
+                if (isStaticFile) {
                     e.preventDefault();
                     window.location.href = './login.html';
                 }
